<resources>

    <string name="app_name">Uma Gota que Constrói</string>
    <string name="copyright">Projeto Uma Gota Que Constrói - Todos os Direitos Reservados 2017 - 2018</string>
    <string name="collect">SOLICITAR COLETA</string>
    <string name="purchase">COMPRAR</string>
    <string name="historic">HISTÓRICO</string>
    <string name="transparency">TRANSPARÊNCIA</string>
    <string name="amount">QUANTIDADE</string>
    <string name="information">Informações de armazenamento</string>
    <string name="better_time">MELHOR HORÁRIO</string>
    <string name="format_time">HH:MM</string>
    <string name="neutro">NEUTRO</string>
    <string name="aromatizado">AROMATIZADO</string>
    <string name="valor_padrao">R$ 8,00</string>
    <string name="quantidade">Quantidade:</string>
    <string name="title_activity_principal">Principal</string>
    <string name="unidades">6 UN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nome_cad">NOME:</string>
    <string name="rua_cad">RUA:</string>
    <string name="numero_cad">NÚMERO:</string>
    <string name="bairro_cad">BAIRRO:</string>
    <string name="telefone_cad">TELEFONE:</string>
    <string name="complemento_cad">COMPLEMENTO:</string>
    <string name="projeto">Projeto Uma Gota que Constrói</string>
    <string name="app">Aplicativo: Uma Gota</string>
    <string name="versao">Versão 1.0.0</string>
    <string name="fale_conosco">Fale conosco</string>
    <string name="email">Email: contato@umagotaqueconstroi.com.br</string>
    <string name="wpp">Whatsapp: (99) 9 9999-9999</string>
    <string name="site">www.umagotaqueconstroi.com.br</string>
    <string name="facebook">www.facebook.com/gota</string>
    <string name="associacao">Associação de Bairro</string>
    <string name="apae">APAE</string>
    <string name="capsad">CAPS AD</string>
    <string name="caps">CAPS</string>


    <string name="action_settings">Settings</string>

    <string name="desc_apae"> 	Associação em que, além de pais e amigos dos excepcionais, toda a
        comunidade se une para prevenir e tratar a deficiência e promover o bem estar e
        desenvolvimento da pessoa com deficiência.</string>

    <string name="desc_associacao"> Tem o objetivo de centralizar os problemas que ocorrem no bairro
        e através de um representante eleito pelos moradores, estes problemas são levados ao conhecimento
        do poder executivo municipal e cobradas as necessárias providências</string>

    <string name="desc_caps"> Presta atendimento a pessoas com grave sofrimento psíquico, diminuindo
        e evitando internações psiquiátricas, e articular-se com a rede de serviços da comunidade
        favorecendo a reinserção delas a este espaço.</string>

    <string name="desc_capsad">Destina-se ao atendimento de usuários com transtornos mentais decorrentes
        do uso e dependência de substâncias psicoativas (incluindo o álcool), oferecendo tratamento
        com ênfase na redução de danos e o estímulo a novos hábitos,</string>


</resources>
