<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gotaqueconstroi.umagotaqueconstroi.Cadastro">



        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="27dp"
            android:layout_toLeftOf="@+id/btnContinua"
            android:layout_toStartOf="@+id/btnContinua"
            android:text="@string/nome_cad"
            android:textColor="@color/lettersDark" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textView7"
            android:layout_toEndOf="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/editText"
            android:layout_marginTop="21dp"
            android:text="@string/rua_cad"
            android:textColor="@color/lettersDark" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textView8"
            android:layout_toEndOf="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="25dp"
            android:text="@string/numero_cad"
            android:textColor="@color/lettersDark" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_below="@+id/textView9"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/editText3"
            android:layout_marginTop="22dp"
            android:text="@string/bairro_cad"
            android:textColor="@color/lettersDark" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:layout_below="@+id/textView10"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/editText4"
            android:layout_marginTop="20dp"
            android:text="@string/telefone_cad"
            android:textColor="@color/lettersDark" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editText4"
            android:layout_alignStart="@+id/editText4"
            android:layout_below="@+id/textView11"
            android:ems="10"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/btnContinua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@null"
            app:srcCompat="@drawable/button_continuar" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText3"
            android:layout_alignEnd="@+id/editText6"
            android:layout_alignRight="@+id/editText6"
            android:text="@string/complemento_cad"
            android:textColor="@color/lettersDark" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/editText4"
            android:layout_alignRight="@+id/editText4"
            android:layout_below="@+id/textView12"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/lettersLight"
            android:textSize="9dp" />

    </RelativeLayout>


