<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gotaqueconstroi.umagotaqueconstroi.Principal"
    tools:showIn="@layout/app_bar_principal">

    <ImageButton
        android:id="@+id/btnColeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/coleta"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/comprar"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="27dp"
        android:background="@null"
        android:layout_alignTop="@+id/btnColeta"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/btnHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/historico"
        android:layout_marginTop="97dp"
        android:background="@null"
        android:layout_below="@+id/btnColeta"
        android:layout_alignLeft="@+id/btnColeta"
        android:layout_alignStart="@+id/btnColeta"
        />

    <ImageButton
        android:id="@+id/btnTransparencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnComprar"
        android:layout_alignStart="@+id/btnComprar"
        android:layout_alignTop="@+id/btnHistorico"
        app:srcCompat="@drawable/contas"
        android:background="@null"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/copyright"
        android:gravity="center"
        android:textSize="9dp"
        android:textColor="@color/lettersLight"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnColeta"
        android:layout_alignLeft="@+id/btnColeta"
        android:layout_alignRight="@+id/btnColeta"
        android:layout_alignStart="@+id/btnColeta"
        android:layout_below="@+id/btnColeta"
        android:layout_marginTop="11dp"
        android:text="@string/collect"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnComprar"
        android:layout_alignLeft="@+id/btnComprar"
        android:layout_alignRight="@+id/btnComprar"
        android:layout_alignStart="@+id/btnComprar"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/purchase"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnHistorico"
        android:layout_alignLeft="@+id/btnHistorico"
        android:layout_alignRight="@+id/btnHistorico"
        android:layout_alignStart="@+id/btnHistorico"
        android:layout_below="@+id/btnHistorico"
        android:layout_marginTop="12dp"
        android:text="@string/historic"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignEnd="@+id/btnTransparencia"
        android:layout_alignLeft="@+id/btnTransparencia"
        android:layout_alignRight="@+id/btnTransparencia"
        android:layout_alignStart="@+id/btnTransparencia"
        android:text="@string/transparency"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

</RelativeLayout>
