<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gotaqueconstroi.umagotaqueconstroi.MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/coleta"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/comprar"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="27dp"
        android:background="@null"
        android:layout_alignTop="@+id/imageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/historico"
        android:layout_marginTop="97dp"
        android:background="@null"
        android:layout_below="@+id/imageButton"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_alignTop="@+id/imageButton3"
        app:srcCompat="@drawable/contas"
        android:background="@null"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/copyright"
        android:gravity="center"
        android:textSize="9dp"
        android:textColor="@color/lettersLight"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignRight="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:layout_below="@+id/imageButton"
        android:layout_marginTop="11dp"
        android:text="@string/collect"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton2"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignRight="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/purchase"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignRight="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_below="@+id/imageButton3"
        android:layout_marginTop="12dp"
        android:text="@string/historic"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignEnd="@+id/imageButton4"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_alignRight="@+id/imageButton4"
        android:layout_alignStart="@+id/imageButton4"
        android:text="@string/transparency"
        android:gravity="center"
        android:textColor="@color/lettersDark"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_pq"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4" />
</RelativeLayout>
